--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+fastapi
+uvicorn
 streamlit==1.32.0
 pandas==2.1.4
 numpy==1.26.4
 requests==2.31.0
 fpdf==1.7.2
 matplotlib==3.9.1
+python-multipart
